crates/loader/src/snapshots/kcl_loader__tests__builtin_call_0.snap
---
source: crates/loader/src/tests.rs
expression: "format! (\"{:#?}\", p.symbols.values())"
---
[
    SymbolInfo {
        ty: Type {
            kind: Function(
                FunctionType {
                    doc: "Prints the values to a stream, or to the system stdout by default.\nOptional keyword arguments:\nsep:   string inserted between values, default a space.\nend:   string appended after the last value, default a newline.",
                    params: [],
                    self_ty: None,
                    return_ty: Type {
                        kind: None,
                        is_type_alias: false,
                        flags: NONE,
                    },
                    is_variadic: true,
                    kw_only_index: None,
                },
            ),
            is_type_alias: false,
            flags: FUNCTION,
        },
        name: "print",
        range: (
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    0,
                ),
            },
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    5,
                ),
            },
        ),
        owner: None,
        def: Some(
            SymbolRef {
                id: Index {
                    index: 1,
                    generation: 0,
                },
                kind: Function,
            },
        ),
        attrs: [],
        is_global: false,
    },
    SymbolInfo {
        ty: Type {
            kind: StrLit(
                "hello world",
            ),
            is_type_alias: false,
            flags: STR | LITERAL,
        },
        name: "@StringLitExpression",
        range: (
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    19,
                ),
            },
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    19,
                ),
            },
        ),
        owner: None,
        def: Some(
            SymbolRef {
                id: Index {
                    index: 0,
                    generation: 0,
                },
                kind: Expression,
            },
        ),
        attrs: [
            SymbolRef {
                id: Index {
                    index: 167,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 168,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 169,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 170,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 171,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 172,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 173,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 174,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 175,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 176,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 177,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 178,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 179,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 180,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 181,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 182,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 183,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 184,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 185,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 186,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 187,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 188,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 189,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 190,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 191,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 192,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 193,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 194,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 195,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 196,
                    generation: 0,
                },
                kind: Function,
            },
        ],
        is_global: false,
    },
    SymbolInfo {
        ty: Type {
            kind: None,
            is_type_alias: false,
            flags: NONE,
        },
        name: "@CallExpression",
        range: (
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    20,
                ),
            },
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    20,
                ),
            },
        ),
        owner: None,
        def: Some(
            SymbolRef {
                id: Index {
                    index: 1,
                    generation: 0,
                },
                kind: Expression,
            },
        ),
        attrs: [],
        is_global: false,
    },
]
