crates/loader/src/snapshots/kcl_loader__tests__list_options_0.snap
---
source: crates/loader/src/tests.rs
expression: "format! (\"{:#?}\", options)"
---
[
    OptionHelp {
        name: "key",
        ty: "int",
        required: false,
        default_value: "",
        help: "",
    },
]
