crates/loader/src/snapshots/kcl_loader__tests__list_options_2.snap
---
source: crates/loader/src/tests.rs
expression: "format! (\"{:#?}\", options)"
---
[
    OptionHelp {
        name: "key1",
        ty: "str",
        required: true,
        default_value: "\"value\"",
        help: "help me",
    },
    OptionHelp {
        name: "key2",
        ty: "",
        required: false,
        default_value: "",
        help: "",
    },
]
